<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="@color/oxblood"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="8dp">

        <LinearLayout
            android:id="@+id/ll_titles_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_preview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/save_project_preview"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_preview_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="monospace"
                android:text="@string/project_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_preview_full"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:contentDescription="@string/full_preview" />

            <com.example.canvagrid.GridView
                android:id="@+id/gv_preview_full"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>