<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginBottom="80dp">
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/oxblood"
        android:fontFamily="monospace"
        android:text="@string/select_img"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/iv_selected_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/image"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imgView_desc"/>

        <com.example.canvagrid.GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/grey"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_size"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <SeekBar
            android:id="@+id/sb_grid_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/grid_opacity"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <SeekBar
            android:id="@+id/sb_opacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progress="255" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/grid_color"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/color_red"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:background="@color/red"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/color_green"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:background="@color/green"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/color_blue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:background="@color/blue"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/color_white"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:background="@color/white"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/color_black"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:background="@color/black"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>

    <Button
        android:id="@+id/btn_main_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/oxblood"
        android:fontFamily="monospace"
        android:text="@string/save_options"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:typeface="serif" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>